crates/aw-core/tests/snapshots/schema_roundtrip__ipc_open.snap
---
source: crates/aw-core/tests/schema_roundtrip.rs
expression: json_of(event)
---
{
  "evidence": {
    "level": "E1"
  },
  "ipc_kind": "unix_stream",
  "kind": "ipc_open",
  "name": "/tmp/placeholder.sock",
  "peer": {
    "pid": 6001,
    "tid": 6001,
    "uid": "0x0000000000000011"
  },
  "proc": {
    "pid": 5120,
    "tid": 5120,
    "uid": "0x9f3a11c2d4e5f601"
  },
  "seq": 160,
  "session_id": 7,
  "source": "linux.ebpf/unix_stream",
  "ts_mono_ns": 5021000160,
  "ts_wall_ns": 1791273662000000000,
  "v": 1
}
