crates/aw-core/tests/snapshots/schema_roundtrip__ipc_transfer.snap
---
source: crates/aw-core/tests/schema_roundtrip.rs
expression: json_of(event)
---
{
  "bytes": 128,
  "channel": 7,
  "direction": "a_to_b",
  "evidence": {
    "level": "E1"
  },
  "kind": "ipc_transfer",
  "proc": {
    "pid": 5120,
    "tid": 5120,
    "uid": "0x9f3a11c2d4e5f601"
  },
  "seq": 161,
  "session_id": 7,
  "source": "linux.ebpf/unix_stream",
  "ts_mono_ns": 5021000161,
  "ts_wall_ns": 1791273662000000000,
  "v": 1
}
