crates/aw-core/tests/snapshots/schema_roundtrip__process_exit.snap
---
source: crates/aw-core/tests/schema_roundtrip.rs
expression: json_of(event)
---
{
  "evidence": {
    "level": "E1"
  },
  "exit_code": 0,
  "kind": "process_exit",
  "proc": {
    "pid": 5120,
    "tid": 5120,
    "uid": "0x9f3a11c2d4e5f601"
  },
  "seq": 102,
  "session_id": 7,
  "signal": null,
  "source": "linux.ebpf/sched_process_exit",
  "ts_mono_ns": 5021000102,
  "ts_wall_ns": 1791273662000000000,
  "v": 1
}
