crates/aw-core/tests/snapshots/schema_roundtrip__process_start.snap
---
source: crates/aw-core/tests/schema_roundtrip.rs
expression: json_of(event)
---
{
  "argv": [
    "example",
    "/tmp/placeholder"
  ],
  "cwd": "/tmp/work",
  "env": {
    "LANG": "C"
  },
  "evidence": {
    "level": "E1"
  },
  "exe": "/usr/bin/example",
  "how": "exec",
  "kind": "process_start",
  "parent_uid": "0x1b2c3d4e5f607182",
  "ppid": 5101,
  "proc": {
    "pid": 5120,
    "tid": 5120,
    "uid": "0x9f3a11c2d4e5f601"
  },
  "seq": 101,
  "session_id": 7,
  "signer": null,
  "source": "linux.ebpf/sched_process_exec",
  "start_time_ns": 1791273661998000000,
  "ts_mono_ns": 5021000101,
  "ts_wall_ns": 1791273662000000000,
  "user": {
    "id": "1000",
    "name": "placeholder"
  },
  "v": 1
}
